[build-system]
requires = ["jupyter-packaging~=0.12.3", "jupyterlab~=4.0.2"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["papyri_lab/labextension/static/style.js"]
ensured-targets = ["papyri_lab/labextension/static/style.js", "papyri_lab/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["papyri_lab/labextension/**", "yarn.lock", ".*", "package-lock.json"]
